@@ -1,3 +1,6 @@
+2010-10-8 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #5864: Recursive FE groups (thanks to Stephan Grossberndt)
+
 2010-10-31 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Bug #10166: TCA Icon using SpriteManager if 4.4.x is installed
 	* Bug #10327: eregi_replace (in pi1) is deprecated
